--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - 蒸馏: api/single_distiller_api.md
   - SA搜索: api/nas_api.md
   - 搜索空间: api/search_space.md
+- 算法原理: algo/algo.md
 
 theme:
     name: readthedocs
@@ -41,7 +42,8 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tasklist
   - pymdownx.tilde
+  - mdx_math
 
 extra_javascript:
   - mathjax-config.js
-  - MathJax.js?config=TeX-AMS-MML_HTMLorMML
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
