--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,12 +2,6 @@ site_name: PaddleSlim Docs
 repo_url: https://github.com/PaddlePaddle/PaddleSlim
 nav:
 - Home: index.md
-- 教程:
-  - 离线量化: tutorials/quant_post_demo.md
-  - 量化训练: tutorials/quant_aware_demo.md
-  - Embedding量化: tutorials/quant_embedding_demo.md
-  - SA搜索: tutorials/nas_demo.md
-  - 知识蒸馏: tutorials/distillation_demo.md
 - API:
   - 量化: api/quantization_api.md
   - 剪枝与敏感度:  api/prune_api.md
@@ -16,7 +10,14 @@ nav:
   - SA搜索: api/nas_api.md
   - 搜索空间: api/search_space.md
   - 硬件延时评估表: table_latency.md
+- 教程:
+  - 离线量化: tutorials/quant_post_demo.md
+  - 量化训练: tutorials/quant_aware_demo.md
+  - Embedding量化: tutorials/quant_embedding_demo.md
+  - SA搜索: tutorials/nas_demo.md
+  - 知识蒸馏: tutorials/distillation_demo.md
 - 算法原理: algo/algo.md
+- 模型库: model_zoo.md
 
 theme:
     name: readthedocs
