code block use fixed width 590px

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -23,6 +23,9 @@ theme:
     name: readthedocs
     highlightjs: true
 
+extra_css:
+  - extra.css
+
 markdown_extensions:
   - admonition
   - codehilite:
