--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -28,8 +28,7 @@ extra_css:
 
 markdown_extensions:
   - admonition
-  - codehilite:
-      linenums: true
+  - codehilite
   - toc:
       permalink: "#"
   - footnotes
