--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -4,6 +4,7 @@ nav:
 - Home: index.md
 - 模型库: model_zoo.md
 - 教程:
+  - 图像分类模型通道剪裁-快速开始: tutorials/pruning_tutorial.md
   - 离线量化: tutorials/quant_post_demo.md
   - 量化训练: tutorials/quant_aware_demo.md
   - Embedding量化: tutorials/quant_embedding_demo.md
