--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - 量化训练: tutorials/quant_aware_demo.md
   - Embedding量化: tutorials/quant_embedding_demo.md
   - SA搜索: tutorials/nas_demo.md
+  - One-shot搜索: tutorials/one_shot_nas_demo.md
   - 搜索空间: search_space.md
   - 知识蒸馏: tutorials/distillation_demo.md
 - API:
@@ -17,6 +18,8 @@ nav:
   - 模型分析: api/analysis_api.md
   - 知识蒸馏: api/single_distiller_api.md
   - SA搜索: api/nas_api.md
+  - One-shot搜索: api/one_shot_api.md
+  - 搜索空间: search_space.md
   - 硬件延时评估表: table_latency.md
 - 算法原理: algo/algo.md
 
