--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -5,8 +5,8 @@ nav:
 - 模型库: model_zoo.md
 - 教程:
   - 图像分类模型通道剪裁-快速开始: tutorials/pruning_tutorial.md
-  - 离线量化: tutorials/quant_post_demo.md
-  - 量化训练: tutorials/quant_aware_demo.md
+  - 图像分类模型离线量化-快速开始: tutorials/quant_post_tutorial.md
+  - 图像分类模型量化训练-快速开始: tutorials/quant_aware_tutorial.md
   - Embedding量化: tutorials/quant_embedding_demo.md
   - SA搜索: tutorials/nas_demo.md
   - One-shot搜索: tutorials/one_shot_nas_demo.md
@@ -16,8 +16,7 @@ nav:
   - 量化: api/quantization_api.md
   - 剪枝与敏感度:  api/prune_api.md
   - 模型分析: api/analysis_api.md
-  - 简单知识蒸馏: api/single_distiller_api.md
-  - 大规模可扩展知识蒸馏框架 Pantheon: api/pantheon_api.md
+  - 知识蒸馏: api/single_distiller_api.md
   - SA搜索: api/nas_api.md
   - One-shot搜索: api/one_shot_api.md
   - 搜索空间: search_space.md
