--- a/demo/mkldnn_quant/quant_aware/config.yaml
+++ b/demo/mkldnn_quant/quant_aware/config.yaml
@@ -10,11 +10,13 @@ activation_bits: 8
 # ops of name_scope in not_quant_pattern list, will not be quantized
 not_quant_pattern: ["skip_quant"]
 # ops of type in quantize_op_types, will be quantized
-quantize_op_types: ["conv2d", "depthwise_conv2d", "mul","elementwise_add", "pool2d"]
+#quantize_op_types: ["conv2d", "depthwise_conv2d", "mul"]
+quantize_op_types: ["conv2d", "depthwise_conv2d", "mul"]
 # data type after quantization, such as "uint8", "int8", etc. default is "int8"
 dtype: "int8"
 # window size for "range_abs_max" quantization. defaulf is 10000
 window_size: 10000
 # The decay coefficient of moving average, default is 0.9
 moving_rate: 0.9
-
+# if True, 'quantoze_op_types' will be TRANSFORM_PASS_OP_TYPES + QUANT_DEQUANT_PASS_OP_TYPE        
+is_full_quantize: True
