--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "demo/ocr/PaddleOCR"]
 	path = demo/ocr/PaddleOCR
 	url = https://github.com/PaddlePaddle/PaddleOCR
+[submodule "demo/PaddleClas"]
+	path = demo/PaddleClas
+	url = https://github.com/PaddlePaddle/PaddleClas.git
