Update mkldnn_quant readme

--- a/demo/mkldnn_quant/CMakeLists.txt
+++ b/demo/mkldnn_quant/CMakeLists.txt
@@ -9,6 +9,7 @@ message("flags" ${CMAKE_CXX_FLAGS})
 if(NOT DEFINED PADDLE_LIB)
   message(FATAL_ERROR "please set PADDLE_LIB with -DPADDLE_LIB=/path/paddle/lib")
 endif()
+set(DEMO_NAME sample_tester)
 if(NOT DEFINED DEMO_NAME)
   message(FATAL_ERROR "please set DEMO_NAME with -DDEMO_NAME=demo_name")
 endif()
