fix config and add coco demo

--- a/demo/auto-compression/configs/CV/mbv2_qat_dis.yaml
+++ b/demo/auto-compression/configs/CV/mbv2_qat_dis.yaml
@@ -58,5 +58,6 @@ TrainConfig:
   eval_iter: 1000
   learning_rate: 0.0001
   optimizer: SGD
+  optim_args:
+    weight_decay: 4.0e-05
   origin_metric: 0.765
-  weight_decay: 4.0e-05
