--- a/demo/auto-compression/configs/PaddleDet/tinypose_qat_dis.yaml
+++ b/demo/auto-compression/configs/PaddleDet/tinypose_qat_dis.yaml
@@ -1,8 +1,8 @@
 Global:
-  reader_config: configs/PaddleDet/yolo_reader.yml
-  input_list: ['image', 'im_shape', 'scale_factor']
-  Evaluation: True
-  model_dir: ./yolov3_mobilenet_v1_270e_coco/
+  reader_config: configs/PaddleDet/tinypose_reader.yml
+  input_list: ['image']
+  Evaluation: False
+  model_dir: ./tinypose_128x96/
   model_filename: model.pdmodel
   params_filename: model.pdiparams
 
@@ -10,29 +10,24 @@ Distillation:
   distill_lambda: 1.0
   distill_loss: l2_loss
   distill_node_pair:
-  - teacher_conv2d_84.tmp_0
-  - conv2d_84.tmp_0
-  - teacher_conv2d_85.tmp_0
-  - conv2d_85.tmp_0
-  - teacher_conv2d_86.tmp_0
-  - conv2d_86.tmp_0
+  - teacher_conv2d_441.tmp_0
+  -  conv2d_441.tmp_0
   merge_feed: true
-  teacher_model_dir: ./yolov3_mobilenet_v1_270e_coco/
+  teacher_model_dir: ./tinypose_128x96/
   teacher_model_filename: model.pdmodel
   teacher_params_filename: model.pdiparams
 
 Quantization:
   activation_bits: 8
-  activation_quantize_type: 'range_abs_max'
-  weight_quantize_type: 'channel_wise_abs_max'
   is_full_quantize: false
+  activation_quantize_type: 'range_abs_max'
+  weight_quantize_type: 'abs_max'
   not_quant_pattern:
   - skip_quant
   quantize_op_types:
   - conv2d
   - depthwise_conv2d
   weight_bits: 8
-
 TrainConfig:
   epochs: 1
   eval_iter: 1000
@@ -40,5 +35,5 @@ TrainConfig:
   optimizer: SGD
   optim_args:
     weight_decay: 4.0e-05
-  #origin_metric: 0.289
+  #origin_metric: 0.291
 
