--- a/demo/auto-compression/detection/configs/yolov3_mbv1_qat_dis.yaml
+++ b/demo/auto-compression/detection/configs/yolov3_mbv1_qat_dis.yaml
@@ -1,5 +1,5 @@
 Global:
-  reader_config: configs/PaddleDet/yolo_reader.yml
+  reader_config: configs/yolo_reader.yml
   input_list: ['image', 'im_shape', 'scale_factor']
   Evaluation: True
   model_dir: ./yolov3_mobilenet_v1_270e_coco/
