--- a/demo/auto_compression/pp-humanseg/configs/humanseg_quant_dis.yaml
+++ b/demo/auto_compression/pp-humanseg/configs/humanseg_quant_dis.yaml
@@ -1,3 +1,6 @@
+Global:
+  reader_config: configs/pp_humanseg_lite.yml
+
 Distillation:
   distill_lambda: 1.0
   distill_loss: l2_loss
@@ -5,9 +8,9 @@ Distillation:
   - teacher_batch_norm_47.tmp_2
   - batch_norm_47.tmp_2
   merge_feed: true
-  teacher_model_dir: ./inference_model
-  teacher_model_filename: inference.pdmodel
-  teacher_params_filename: inference.pdiparams
+  teacher_model_dir: ./ppseg_lite_portrait_398x224_with_softmax
+  teacher_model_filename: model.pdmodel
+  teacher_params_filename: model.pdiparams
 Quantization:
   activation_bits: 8
   is_full_quantize: false
