Update figure in README (#1117)

--- a/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_quant_dis.yaml
+++ b/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_quant_dis.yaml
@@ -1,5 +1,5 @@
 Global:
-  reader_config: configs/pp_humanseg_lite.yml
+  reader_config: configs/pp_humanseg_lite.yaml
 
 Distillation:
   distill_lambda: 1.0
