--- a/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_auto.yaml
+++ b/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_auto.yaml
@@ -1,5 +1,5 @@
 Global:
-  reader_config: configs/pp_humanseg_lite.yml
+  reader_config: configs/pp_humanseg_lite.yaml
 
 TrainConfig:
   epochs: 14
