--- a/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_lite.yaml
+++ b/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_lite.yaml
@@ -25,7 +25,7 @@ train_dataset:
 val_dataset:
   type: Dataset
   dataset_root: data/humanseg
-  train_path: data/humanseg/val.txt
+  val_path: data/humanseg/val.txt
   num_classes: 2
   transforms:
   - type: PaddingByAspectRatio
