--- a/demo/auto_compression/nlp/configs/iflytek.yaml
+++ b/demo/auto_compression/nlp/configs/iflytek.yaml
@@ -2,7 +2,8 @@ TrainConfig:
   epochs: 12
   eval_iter: 750
   learning_rate: 2.0e-5
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: AdamW
     weight_decay: 0.01
-  optimizer: AdamW
   origin_metric: 0.6021
