--- a/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_auto.yaml
+++ b/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_auto.yaml
@@ -5,7 +5,8 @@ TrainConfig:
   epochs: 14
   eval_iter: 400
   learning_rate: 5.0e-03
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: SGD
     weight_decay: 0.0005
-  optimizer: SGD
   
