--- a/demo/auto_compression/detection/configs/tinypose_qat_dis.yaml
+++ b/demo/auto_compression/detection/configs/tinypose_qat_dis.yaml
@@ -7,10 +7,9 @@ Global:
   params_filename: model.pdiparams
 
 Distillation:
-  distill_lambda: 1.0
-  distill_loss: l2_loss
-  distill_node_pair:
-  - teacher_conv2d_441.tmp_0
+  alpha: 1.0
+  loss: l2
+  node:
   -  conv2d_441.tmp_0
   merge_feed: true
   teacher_model_dir: ./tinypose_128x96/
@@ -32,8 +31,9 @@ TrainConfig:
   epochs: 1
   eval_iter: 1000
   learning_rate: 0.0001
-  optimizer: SGD
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: SGD
     weight_decay: 4.0e-05
   #origin_metric: 0.291
 
