--- a/demo/auto_compression/detection/configs/yolov3_mbv1_qat_dis.yaml
+++ b/demo/auto_compression/detection/configs/yolov3_mbv1_qat_dis.yaml
@@ -7,16 +7,15 @@ Global:
   params_filename: model.pdiparams
 
 Distillation:
-  distill_lambda: 1.0
-  distill_loss: l2_loss
-  distill_node_pair:
+  alpha: 1.0
+  loss: l2
+  node:
   - teacher_conv2d_84.tmp_0
   - conv2d_84.tmp_0
   - teacher_conv2d_85.tmp_0
   - conv2d_85.tmp_0
   - teacher_conv2d_86.tmp_0
   - conv2d_86.tmp_0
-  merge_feed: true
   teacher_model_dir: ./yolov3_mobilenet_v1_270e_coco/
   teacher_model_filename: model.pdmodel
   teacher_params_filename: model.pdiparams
@@ -37,8 +36,9 @@ TrainConfig:
   epochs: 1
   eval_iter: 1000
   learning_rate: 0.0001
-  optimizer: SGD
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: SGD
     weight_decay: 4.0e-05
   #origin_metric: 0.289
 
