--- a/demo/auto_compression/detection/configs/yolov5s_qat_dis.yaml
+++ b/demo/auto_compression/detection/configs/yolov5s_qat_dis.yaml
@@ -9,16 +9,12 @@ Global:
   params_filename: model.pdiparams
 
 Distillation:
-  distill_lambda: 1.0
-  distill_loss: l2_loss
-  distill_node_pair:
-  - teacher_conv2d_106.tmp_1
+  alpha: 1.0
+  loss: l2
+  node:
   - conv2d_106.tmp_1
-  - teacher_conv2d_113.tmp_1
   - conv2d_113.tmp_1
-  - teacher_conv2d_119.tmp_1
   - conv2d_119.tmp_1
-  merge_feed: true
   teacher_model_dir: ./yolov5_inference_model/
   teacher_model_filename: model.pdmodel
   teacher_params_filename: model.pdiparams
@@ -40,7 +36,8 @@ TrainConfig:
   epochs: 1
   eval_iter: 1000
   learning_rate: 0.00001
-  optimizer: SGD
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: SGD
     weight_decay: 4.0e-05
   target_metric: 0.365
