--- a/demo/auto_compression/nlp/configs/cluewsc.yaml
+++ b/demo/auto_compression/nlp/configs/cluewsc.yaml
@@ -2,7 +2,8 @@ TrainConfig:
   epochs: 100
   eval_iter: 70
   learning_rate: 1.0e-5
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: AdamW
     weight_decay: 0.01
-  optimizer: AdamW
   origin_metric: 0.8421
