--- a/demo/auto_compression/nlp/configs/cmnli.yaml
+++ b/demo/auto_compression/nlp/configs/cmnli.yaml
@@ -2,7 +2,8 @@ TrainConfig:
   epochs: 6
   eval_iter: 2000
   learning_rate: 3.0e-5
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: AdamW
     weight_decay: 0.01
-  optimizer: AdamW
   origin_metric: 0.8098
