--- a/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_quant_dis.yaml
+++ b/demo/auto_compression/semantic_segmentation/configs/pp_humanseg_quant_dis.yaml
@@ -2,12 +2,10 @@ Global:
   reader_config: configs/pp_humanseg_lite.yaml
 
 Distillation:
-  distill_lambda: 1.0
-  distill_loss: l2_loss
-  distill_node_pair:
-  - teacher_batch_norm_47.tmp_2
+  alpha: 1.0
+  loss: l2
+  node:
   - batch_norm_47.tmp_2
-  merge_feed: true
   teacher_model_dir: ./ppseg_lite_portrait_398x224_with_softmax
   teacher_model_filename: model.pdmodel
   teacher_params_filename: model.pdiparams
@@ -24,6 +22,7 @@ TrainConfig:
   epochs: 1
   eval_iter: 400
   learning_rate: 0.0005
-  optimizer: SGD
-  optim_args:
-    weight_decay: 4.0e-05
+  optimizer_builder:
+    optimizer: 
+      type: SGD
+    weight_decay: 0.0005
