--- a/demo/auto_compression/detection/configs/yolov5s_qat_dis.yaml
+++ b/demo/auto_compression/detection/configs/yolov5s_qat_dis.yaml
@@ -9,29 +9,16 @@ Global:
   params_filename: model.pdiparams
 
 Distillation:
-  distill_lambda: 1.0
-  distill_loss: l2_loss
-  distill_node_pair:
-  - teacher_conv2d_106.tmp_1
+  alpha: 1.0
+  loss: l2
+  node:
   - conv2d_106.tmp_1
-  - teacher_conv2d_113.tmp_1
   - conv2d_113.tmp_1
-  - teacher_conv2d_119.tmp_1
   - conv2d_119.tmp_1
-  merge_feed: true
-  teacher_model_dir: ./yolov5s_infer/
-  teacher_model_filename: model.pdmodel
-  teacher_params_filename: model.pdiparams
 
 Quantization:
   use_pact: true
-  activation_bits: 8
-  weight_bits: 8
   activation_quantize_type: 'range_abs_max'
-  weight_quantize_type: 'channel_wise_abs_max'
-  is_full_quantize: false
-  not_quant_pattern:
-  - skip_quant
   quantize_op_types:
   - conv2d
   - depthwise_conv2d
@@ -40,7 +27,8 @@ TrainConfig:
   train_iter: 3000
   eval_iter: 1000
   learning_rate: 0.00001
-  optimizer: SGD
-  optim_args:
+  optimizer_builder:
+    optimizer: 
+      type: SGD
     weight_decay: 4.0e-05
   target_metric: 0.365
