Add demo of ACT for some segmentation models

--- a/demo/auto_compression/semantic_segmentation/configs/deeplabv3/deeplabv3_qat.yaml
+++ b/demo/auto_compression/semantic_segmentation/configs/deeplabv3/deeplabv3_qat.yaml
@@ -1,11 +1,11 @@
 Global:
-  reader_config: configs/pp_humanseg_lite.yaml
+  reader_config: configs/dataset/cityscapes_1024x512_scale1.0.yml
 
 Distillation:
   alpha: 1.0
   loss: l2
   node:
-  - batch_norm_47.tmp_2
+  - conv2d_123.tmp_1
 
 Quantization:
   quantize_op_types:
@@ -13,9 +13,9 @@ Quantization:
   - depthwise_conv2d
 
 TrainConfig:
-  epochs: 1
-  eval_iter: 400
-  learning_rate: 0.0005
+  epochs: 10
+  eval_iter: 360
+  learning_rate: 0.0001
   optimizer_builder:
     optimizer: 
       type: SGD
