--- a/demo/auto_compression/pytorch_yolov5/configs/yolov5s_qat_dis.yaml
+++ b/demo/auto_compression/pytorch_yolov5/configs/yolov5s_qat_dis.yaml
@@ -11,14 +11,10 @@ Global:
 Distillation:
   alpha: 1.0
   loss: l2
-  node:
-  - conv2d_106.tmp_1
-  - conv2d_113.tmp_1
-  - conv2d_119.tmp_1
 
 Quantization:
   use_pact: true
-  activation_quantize_type: 'range_abs_max'
+  activation_quantize_type: 'moving_average_abs_max'
   quantize_op_types:
   - conv2d
   - depthwise_conv2d
