--- a/demo/auto_compression/nlp/configs/ernie3.0/csl.yaml
+++ b/demo/auto_compression/nlp/configs/ernie3.0/csl.yaml
@@ -1,3 +1,11 @@
+Global:
+  model_dir: ./CSL
+  model_filename: inference.pdmodel
+  params_filename: inference.pdiparams
+  task_name: csl
+  dataset: clue
+  batch_size: 16
+  max_seq_length: 128
 TrainConfig:
   epochs: 16
   eval_iter: 1000
