--- a/demo/auto_compression/nlp/configs/ernie3.0/iflytek.yaml
+++ b/demo/auto_compression/nlp/configs/ernie3.0/iflytek.yaml
@@ -1,3 +1,11 @@
+Global:
+  model_dir: ./IFLYTEK
+  model_filename: inference.pdmodel
+  params_filename: inference.pdiparams
+  task_name: iflytek
+  dataset: clue
+  batch_size: 16
+  max_seq_length: 128
 TrainConfig:
   epochs: 12
   eval_iter: 750
