--- a/demo/auto_compression/nlp/configs/ernie3.0/tnews.yaml
+++ b/demo/auto_compression/nlp/configs/ernie3.0/tnews.yaml
@@ -1,3 +1,11 @@
+Global:
+  model_dir: ./TNEWS
+  model_filename: inference.pdmodel
+  params_filename: inference.pdiparams
+  task_name: tnews
+  dataset: clue
+  batch_size: 16
+  max_seq_length: 128
 TrainConfig:
   epochs: 6
   eval_iter: 1110
