--- a/demo/auto_compression/detection/configs/tinypose_qat_dis.yaml
+++ b/demo/auto_compression/detection/configs/tinypose_qat_dis.yaml
@@ -1,7 +1,8 @@
 Global:
+  arch: 'keypoint'
   reader_config: configs/tinypose_reader.yml
   input_list: ['image']
-  Evaluation: False
+  Evaluation: True
   model_dir: ./tinypose_128x96
   model_filename: model.pdmodel
   params_filename: model.pdiparams
@@ -13,19 +14,21 @@ Distillation:
   -  conv2d_441.tmp_0
 
 Quantization:
-  activation_quantize_type: 'range_abs_max'
-  weight_quantize_type: 'abs_max'
+  use_pact: true
+  activation_quantize_type: 'moving_average_abs_max'
+  weight_quantize_type: 'channel_wise_abs_max'  # 'abs_max' is layer wise quant
   quantize_op_types:
   - conv2d
   - depthwise_conv2d
 
 TrainConfig:
-  epochs: 1
+  train_iter: 30000
   eval_iter: 1000
-  learning_rate: 0.0001
+  learning_rate: 
+    type: CosineAnnealingDecay 
+    learning_rate: 0.015
+    T_max: 30000
   optimizer_builder:
-    optimizer: 
-      type: SGD
-    weight_decay: 4.0e-05
-  #origin_metric: 0.291
-
+    optimizer:
+      type: Momentum
+    weight_decay: 0.00002
