--- a/example/auto_compression/image_classification/configs/InceptionV3/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/InceptionV3/qat_dis.yaml
@@ -1,19 +1,21 @@
 Global:
   input_name: x
-  model_dir: InceptionV3_infer
+  model_dir: save_quant_inception
   model_filename: inference.pdmodel
   params_filename: inference.pdiparams
   batch_size: 32
-  data_dir: /ILSVRC2012
+  resize_size: 320
+  img_size: 299
+  data_dir: /workspace/dataset/ILSVRC2012
   
 Distillation:
-  alpha: 10.0
+  alpha: 1.0
   loss: l2
   node:
   - softmax_1.tmp_0
 Quantization:
   is_full_quantize: false
-  activation_quantize_type: range_abs_max
+  activation_quantize_type: moving_average_abs_max
   weight_quantize_type: channel_wise_abs_max
   not_quant_pattern:
   - skip_quant
@@ -21,6 +23,7 @@ Quantization:
   - conv2d
   - depthwise_conv2d
   weight_bits: 8
+  
 TrainConfig:
   epochs: 1
   eval_iter: 500
