--- a/example/auto_compression/image_classification/configs/MobileNetV1/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/MobileNetV1/qat_dis.yaml
@@ -16,7 +16,7 @@ Quantization:
   activation_bits: 8
   is_full_quantize: false
   activation_quantize_type: moving_average_abs_max
-  weight_quantize_type: abs_max
+  weight_quantize_type: channel_wise_abs_max
   not_quant_pattern:
   - skip_quant
   quantize_op_types:
