--- a/example/auto_compression/image_classification/configs/MobileNetV3_large_x1_0/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/MobileNetV3_large_x1_0/qat_dis.yaml
@@ -12,10 +12,10 @@ Distillation:
   node:
   - softmax_0.tmp_0
 Quantization:
+  use_pact: true
   activation_bits: 8
   is_full_quantize: false
-  use_pact: true
-  activation_quantize_type: range_abs_max
+  activation_quantize_type: moving_average_abs_max
   weight_quantize_type: channel_wise_abs_max
   not_quant_pattern:
   - skip_quant
@@ -25,10 +25,10 @@ Quantization:
   weight_bits: 8
 TrainConfig:
   epochs: 1
-  eval_iter: 2000
+  eval_iter: 500
   learning_rate: 
     type: CosineAnnealingDecay 
-    learning_rate: 0.0001
+    learning_rate: 0.015
   optimizer_builder:
     optimizer:
       type: Momentum
