--- a/example/auto_compression/image_classification/configs/SwinTransformer_base_patch4_window7_224/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/SwinTransformer_base_patch4_window7_224/qat_dis.yaml
@@ -15,7 +15,7 @@ Quantization:
   use_pact: true
   activation_bits: 8
   is_full_quantize: false
-  activation_quantize_type: range_abs_max
+  activation_quantize_type: moving_average_abs_max
   weight_quantize_type: channel_wise_abs_max
   not_quant_pattern:
   - skip_quant
