Update HuggingFace Demo / BS=40Speed

--- a/example/auto_compression/nlp/configs/ernie3.0/cluewsc.yaml
+++ b/example/auto_compression/nlp/configs/ernie3.0/cluewsc.yaml
@@ -1,7 +1,7 @@
 Global:
   model_dir: ./CLUEWSC
-  model_filename: inference.pdmodel
-  params_filename: inference.pdiparams
+  model_filename: infer.pdmodel
+  params_filename: infer.pdiparams
   task_name: cluewsc
   dataset: clue
   batch_size: 16
