--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 #paddlepaddle == 1.6.0rc0
+#paddleslim-opt-tools
 tqdm
 pyzmq
 matplotlib
@@ -6,4 +7,3 @@ pillow
 pyyaml
 scikit-learn
 smac
-paddleslim-opt-tools
