--- a/example/auto_compression/semantic_segmentation/configs/pp_liteseg/pp_liteseg_auto.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/pp_liteseg/pp_liteseg_auto.yaml
@@ -1,3 +1,9 @@
+Global:
+  reader_config: configs/dataset/cityscapes_1024x512_scale1.0.yml
+  model_dir: ./RES-paddle2-PPLIteSegSTDC1
+  model_filename: model
+  params_filename: params
+
 TrainConfig:
  epochs: 14
  eval_iter: 90
