--- a/example/auto_compression/semantic_segmentation/configs/pp_liteseg/pp_liteseg_qat.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/pp_liteseg/pp_liteseg_qat.yaml
@@ -1,3 +1,9 @@
+Global:
+  reader_config: configs/dataset/cityscapes_1024x512_scale1.0.yml
+  model_dir: ./RES-paddle2-PPLIteSegSTDC1
+  model_filename: model
+  params_filename: params
+
 Distillation:
   alpha: 1.0
   loss: l2
