--- a/example/auto_compression/semantic_segmentation/configs/unet/unet_qat.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/unet/unet_qat.yaml
@@ -1,5 +1,8 @@
 Global:
   reader_config: configs/dataset/cityscapes_1024x512_scale1.0.yml
+  model_dir: ./RES-paddle2-UNet
+  model_filename: model
+  params_filename: params
 
 Distillation:
   alpha: 1.0
