--- a/example/auto_compression/image_classification/configs/InceptionV3/prune_dis.yaml
+++ b/example/auto_compression/image_classification/configs/InceptionV3/prune_dis.yaml
@@ -6,7 +6,7 @@ Global:
   batch_size: 32
   resize_size: 320
   crop_size: 299
-  data_dir: /ILSVRC2012
+  data_dir: ./ILSVRC2012
   
 Distillation:
   alpha: 1.0
