--- a/example/auto_compression/image_classification/configs/GhostNet_x1_0/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/GhostNet_x1_0/qat_dis.yaml
@@ -4,7 +4,7 @@ Global:
   model_filename: inference.pdmodel
   params_filename: inference.pdiparams
   batch_size: 32
-  data_dir: /ILSVRC2012
+  data_dir: ./ILSVRC2012
   
 Distillation:
   alpha: 1.0
