unify YOLO series act demo

--- a/example/auto_compression/pytorch_yolo_series/configs/yolov5s_qat_dis.yaml
+++ b/example/auto_compression/pytorch_yolo_series/configs/yolov5s_qat_dis.yaml
@@ -6,6 +6,7 @@ Global:
   train_anno_path: annotations/instances_train2017.json
   val_anno_path: annotations/instances_val2017.json
   Evaluation: True
+  arch: YOLOv5
 
 Distillation:
   alpha: 1.0
