--- a/example/auto_compression/pytorch_yolo_series/configs/yolov7_qat_dis.yaml
+++ b/example/auto_compression/pytorch_yolo_series/configs/yolov7_qat_dis.yaml
@@ -1,11 +1,12 @@
 Global:
-  model_dir: ./yolov6s.onnx
+  model_dir: ./yolov7.onnx
   dataset_dir: dataset/coco/
   train_image_dir: train2017
   val_image_dir: val2017
   train_anno_path: annotations/instances_train2017.json
   val_anno_path: annotations/instances_val2017.json
   Evaluation: True
+  arch: YOLOv7
 
 Distillation:
   alpha: 1.0
@@ -19,9 +20,9 @@ Quantization:
   - depthwise_conv2d
 
 TrainConfig:
-  train_iter: 8000
+  train_iter: 5000
   eval_iter: 1000
-  learning_rate: 
+  learning_rate:
     type: CosineAnnealingDecay 
     learning_rate: 0.00003
     T_max: 8000
