fix YOLO series act demo some bug

--- a/example/post_training_quantization/pytorch_yolo_series/configs/yolov5s_ptq.yaml
+++ b/example/post_training_quantization/pytorch_yolo_series/configs/yolov5s_ptq.yaml
@@ -1,6 +1,6 @@
 arch: YOLOv5
 model_dir: ./yolov5s.onnx
-dataset_dir: /dataset/coco/
+dataset_dir: dataset/coco/
 train_image_dir: train2017
 val_image_dir: val2017
 train_anno_path: annotations/instances_train2017.json
