--- a/example/post_training_quantization/detection/configs/picodet_s_analysis.yaml
+++ b/example/post_training_quantization/detection/configs/picodet_s_analysis.yaml
@@ -5,6 +5,9 @@ params_filename: model.pdiparams
 save_dir: ./analysis_results
 metric: COCO
 num_classes: 80
+plot_hist: True
+get_target_quant_model: False
+target_metric: None
 
 PTQ:
   quantizable_op_type: ["conv2d", "depthwise_conv2d"]
@@ -15,17 +18,20 @@ PTQ:
   batch_nums: 10
 
 # Datset configuration
-TrainDataset:
-  !COCODataSet
-    image_dir: train2017
-    anno_path: annotations/instances_train2017.json
-    dataset_dir: /dataset/coco/
-    
 EvalDataset:
   !COCODataSet
     image_dir: val2017
     anno_path: annotations/instances_val2017.json
     dataset_dir: /dataset/coco/
+
+# Small Dataset to accelerate analysis
+# If not exist, delete the dict of FastEvalDataset
+FastEvalDataset:
+  !COCODataSet
+    image_dir: val2017
+    anno_path: annotations/small_instances_val2017.json
+    dataset_dir: /dataset/coco/
+
 
 eval_height: &eval_height 416
 eval_width: &eval_width 416
@@ -41,7 +47,7 @@ EvalReader:
   - Resize: {interp: 2, target_size: *eval_size, keep_ratio: False}
   - NormalizeImage: {is_scale: true, mean: [0.485,0.456,0.406], std: [0.229, 0.224,0.225]}
   - Permute: {}
-  batch_size: 32
+  batch_size: 1
 
 
 
