--- a/example/post_training_quantization/detection/configs/ppyoloe_s_analysis.yaml
+++ b/example/post_training_quantization/detection/configs/ppyoloe_s_analysis.yaml
@@ -1,11 +1,14 @@
 input_list: ['image']
-arch: PPYOLOE    # When export exclude_nms=True, need set arch: PPYOLOE
+arch: PPYOLOE                          # When export exclude_nms=True, need set arch: PPYOLOE
 model_dir: ./ppyoloe_crn_s_300e_coco
 model_filename: model.pdmodel
 params_filename: model.pdiparams
 save_dir: ./analysis_results_ppyoloe
 metric: COCO
 num_classes: 80
+plot_hist: True
+get_target_quant_model: False
+target_metric: None
 
 PTQ:
   quantizable_op_type: ["conv2d", "depthwise_conv2d"]
@@ -14,19 +17,20 @@ PTQ:
   is_full_quantize: False
   batch_size: 32
   batch_nums: 10
-  
 
 # Datset configuration
-TrainDataset:
-  !COCODataSet
-    image_dir: train2017
-    anno_path: annotations/instances_train2017.json
-    dataset_dir: /dataset/coco/
-
 EvalDataset:
   !COCODataSet
     image_dir: val2017
     anno_path: annotations/instances_val2017.json
+    dataset_dir: /paddle/dataset/coco/
+
+# Small Dataset to accelerate analysis
+# If not exist, delete the dict of FastEvalDataset
+FastEvalDataset:
+  !COCODataSet
+    image_dir: val2017
+    anno_path: annotations/small_instances_val2017.json
     dataset_dir: /dataset/coco/
 
 worker_num: 0
@@ -38,4 +42,4 @@ EvalReader:
     - Resize: {target_size: [640, 640], keep_ratio: False, interp: 2}
     - NormalizeImage: {mean: [0.485, 0.456, 0.406], std: [0.229, 0.224, 0.225], is_scale: True}
     - Permute: {}
-  batch_size: 32
+  batch_size: 1
